# 2023-07-04-Minecraft-Server-Playtime-Calculator

./: .gitignore  pyproject.toml  readme.md  requirements.txt
.github/workflows/: on tag release on Github.yaml  on-tag-create-release.yaml
src/: Log.py  Player.py  exec_server_command.py  main.py  main_outer.py
