[tool.poetry]
authors     = ["9FS <pray4spam@googlemail.com>"]
description = ""
license     = "MIT"
name        = "x"
readme      = "readme.md"
repository  = "https://github.com/9-FS/2023-07-04-Minecraft-Server-Playtime-Calculator"
version     = "1.0.1"

[tool.poetry.dependencies]
kfsconfig = "^1.0.0"
kfsfstr   = "^1.0.0"
kfslog    = "^1.0.0"
kfssleep  = "^1.0.0"
python    = "^3.11.0"

[build-system]
build-backend = "poetry.core.masonry.api"
requires      = ["poetry-core"]
